Fix vertical spacing of regions in tables

--- a/share/ocamlary.css
+++ b/share/ocamlary.css
@@ -118,6 +118,10 @@
     padding-left: 1.3em;
 }
 
+.ocamlary-doc td > .region {
+    margin-top: 0;
+}
+
 .ocamlary-doc .region > a.anchor + * {
     margin-top: -1.3em;
 }
